# data-sync-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.clickhouse  Makefile  README.md  config.yaml  count_rows.py  deploy.sh  docker-compose.yml  ecosystem.config.js  extract_schema.py  extract_schema_quick.py  main.py  pyproject.toml  requirements.txt
docker/clickhouse/: init.sql
docs/: ADDING_TRANSFORMS.md  ARCHITECTURE.md  SIR_DOMAIN.md  TECHNICAL.md
migrations/: 001_create_tables.sql
migrations/local/: 001_test_schema.sql  002_source_seed.sql  003_dakavara_pa_seed.sql  004_extract_configs.sql  005_fix_columns_json.sql  006_dest_staging.sql
migrations/prod/sir/: 001_summary.sql
scripts/: seed_source.sh
src/extract/: __init__.py  batch_writer.py  history.py  logger.py  loop.py  query_builder.py  retry.py  status.py  worker.py
src/load/: __init__.py  base.py
src/load/upsert/: __init__.py  loader.py
src/shared/: __init__.py  config.py  connections.py  interfaces.py  mode.py  repositories.py
src/shared/api/: __init__.py  config.py  sync.py
src/sync/: __init__.py  container.py
src/sync/abstractions/: __init__.py  interfaces.py
src/sync/api/: __init__.py  config.py  health.py  sync.py
src/sync/database/: __init__.py  config.py  connections.py  mode.py  (+1 more)
src/transform/: __init__.py  base.py  dependencies.py  orchestrator.py  registry.py
tests/: __init__.py  conftest.py
tests/unit/: test_adaptive_polling.py  test_batch_writer.py  test_config_api.py  test_query_builder.py  test_retry.py  test_status_history.py  test_worker.py
(+18 files in other folders)
